feat: real refactor card

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,2 +1,5 @@
 @import url(./h/h.css);
 @import url(./body/body.css);
+@import url(./card/__group/card__group.css);
+@import url(./card/__image/card__image.css);
+@import url(./card/__group/_content/card__group_content.css);
