--- a/src/style/card/__image/card__image.css
+++ b/src/style/card/__image/card__image.css
@@ -4,5 +4,8 @@
   right: 0;
   top: 0;
   bottom: 0;
-  width: 100%
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  border-radius: 20px;
 }
