--- a/src/style/card/__group/_content/card__group_content.css
+++ b/src/style/card/__group/_content/card__group_content.css
@@ -3,5 +3,10 @@
   top: 0;
   left: 0;
   z-index: 2;
-  padding: 0 10px;
+  padding: 0 20px 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%
 }
